implemented date picker

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_redux: ^0.10.0
   uuid: ^4.5.1
   flutter_local_notifications: ^18.0.1
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
