--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   intl: ^0.20.1
   datepicker_dropdown: ^0.1.6
+  shared_preferences: ^2.3.4
+  provider: ^6.1.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
